# VAQ_ANLP

./: .gitignore  Fine_tuning_ViLT_for_VQA.ipynb  Image-features-extraction-inceptionv3.ipynb  Images-features-extraction-vgg19.ipynb  Inceptionv3-GRU.ipynb  Readme.md  VGG19-LSTM.ipynb  ViLT.ipynb  makefile  pyproject.toml
