[tool.poetry]
name = "vaq"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "2.15.0"
pillow = "9.4.0"
scipy = "1.11.4"
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.4"
pip = "^24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
